--- a/src/app/components/day-iii/day-iii.component.html
+++ b/src/app/components/day-iii/day-iii.component.html
@@ -1,3 +1,3 @@
 <h1>Day 3</h1>
-<p>Part 1: {{result}}</p>
-<!-- <p>Part 2: {{score2}}</p> -->
+<p>Part 1: {{result1}}</p>
+<p>Part 2: {{result2}}</p>
