--- a/src/app/components/day-vii/day-vii.component.html
+++ b/src/app/components/day-vii/day-vii.component.html
@@ -1,3 +1,6 @@
 <h1>Day 7</h1>
-<p>Part 1: {{result1}}</p>
-<p>Part 2: {{result2}}</p>
+<p>Part 1: {{result1}}</p><br>
+<p>Part 2:</p>
+<p>Total file size: {{totalFileSize}}</p>
+<p>Minimum size to delete: {{minimumSizeToDelete}}</p>
+<p>Result: {{result2}}</p>
